--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
 <!-- Optimasi Mesin Pencari oleh Rank Math - https://s.rankmath.com/home -->
-<title>首页 - cn.PemikatWalet.com</title>
+<title>cn.PemikatWalet.com | 印度尼西亚排名第一的燕子诱饵香水</title>
 <meta name="description" content="实用且易于使用。能够产生强大的香气，并被证明能够有效地增加燕子的利润。">
 <meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large">
 <link rel="canonical" href="/">
